Added Bootstrap theme, changed content a little

--- a/UTDScanner Web/Views/Home/Index.cshtml
+++ b/UTDScanner Web/Views/Home/Index.cshtml
@@ -3,15 +3,19 @@
     Layout = "Views/Base.cshtml";
     ViewBag.Title = "UTD Scanner";
 }
-<div class="container">
+<div class="container" role="main">
     <p>Website will get finished eventually. For now:</p>
     <ul>
         <li><a href="https://twitter.com/utdscanner">Twitter @@utdscanner</a></li>
         <li><a href="~/incidents/">List of Incidents</a></li>
         <li>To reference a specific case, use utdscanner.com/case/(number)</li>
         <li>Will create an API if there's demand for it, tweet your interest (please don't scrape)</li>
+        <li>Email: utdscanner@gmail.com</li>
     </ul>
     <p>Data is taken from the <a href="https://www.utdallas.edu/police/publicinfo.html">UTD Police daily crime log</a> and then normalized with additional attributes added.<br />
     The free publication of the crime log data is mandated by the Clery Act.<br />
-    Requests by individuals or representatives of the university to censor information will be ignored.</p>
+    Requests to censor information will be ignored.<br />
+    <br />
+    Shout out to <a href="http://www.reddit.com/r/utdallas">/r/utdallas</a> for the sidebar link!
+    </p>
 </div>
