--- a/UTDScanner Web/Views/Incident/Index.cshtml
+++ b/UTDScanner Web/Views/Incident/Index.cshtml
@@ -3,9 +3,9 @@
     Layout = "Views/Base.cshtml";
     ViewBag.Title = "Incidents - UTD Scanner";
 }
-<div class="container">
+<div class="container" role="main">
     <h1>Incidents</h1>
-    <table>
+    <table class="table table-hover table-condensed">
         <thead>
             <tr>
                 <th>Case Number</th>
@@ -19,7 +19,7 @@
             @foreach (var incident in Model)
             {
                 <tr>
-                    <td>
+                    <td class="nowrap">
                         <a href="~/case/@incident.CaseNumber">@incident.CaseNumber</a>
                     </td>
                     <td>
@@ -28,7 +28,7 @@
                     <td>
                         @incident.Location
                     </td>
-                    <td>
+                    <td class="nowrap">
                         @incident.Reported
                     </td>
                 </tr>
