--- a/UTDScanner Web/Views/Home/Index.cshtml
+++ b/UTDScanner Web/Views/Home/Index.cshtml
@@ -8,9 +8,14 @@
     <ul>
         <li><a href="https://twitter.com/utdscanner">Twitter @@utdscanner</a></li>
         <li><a href="~/incidents/">List of Incidents</a></li>
-        <li>To reference a specific case, use utdscanner.com/case/(number)</li>
-        <li>Will create an API if there's demand for it, tweet your interest (please don't scrape)</li>
         <li>Email: utdscanner@gmail.com</li>
+    </ul>
+    <p>Future features:</p>
+    <ul>
+        <li>Facebook posting</li>
+        <li>Parse, categorize, and normalize Type field</li>
+        <li>Reports with heatmaps, stats, etc</li>
+        <li>API (email/tweet interest please)</li>
     </ul>
     <p>Data is taken from the <a href="https://www.utdallas.edu/police/publicinfo.html">UTD Police daily crime log</a> and then normalized with additional attributes added.<br />
     The free publication of the crime log data is mandated by the Clery Act.<br />
