Added opengraph information to incidents pages, Facebook to home page

--- a/UTDScanner Web/Views/Home/Index.cshtml
+++ b/UTDScanner Web/Views/Home/Index.cshtml
@@ -7,12 +7,12 @@
     <p>Website will get finished eventually. For now:</p>
     <ul>
         <li><a href="https://twitter.com/utdscanner">Twitter @@utdscanner</a></li>
+        <li><a href="https://www.facebook.com/utdscanner"</li>
         <li><a href="~/incidents/">List of Incidents</a></li>
         <li>Email: utdscanner@gmail.com</li>
     </ul>
     <p>Future features:</p>
     <ul>
-        <li>Facebook posting</li>
         <li>Parse, categorize, and normalize Type field</li>
         <li>Reports with heatmaps, stats, etc</li>
         <li>API (email/tweet interest please)</li>
