--- a/UTDScanner Web/Views/Home/Index.cshtml
+++ b/UTDScanner Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p>Website will get finished eventually. For now:</p>
     <ul>
         <li><a href="https://twitter.com/utdscanner">Twitter @@utdscanner</a></li>
-        <li><a href="https://www.facebook.com/utdscanner"</li>
+        <li><a href="https://www.facebook.com/utdscanner">Facebook</a></li>
         <li><a href="~/incidents/">List of Incidents</a></li>
         <li>Email: utdscanner@gmail.com</li>
     </ul>
